--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,59 @@
-# Godot 4+ specific ignores
+############################################
+# Godot 4 project .gitignore
+############################################
+
+# Godot editor cache (imports, thumbnails, etc.)
 .godot/
-/android/
+
+# Import sidecar files generated next to your assets
+*.import
+
+# Import cache dir (Godot 3 style) — still created by some tools
+.import/
+
+# Exported builds and artefacts (adjust as you wish)
+*.exe
+*.dll
+*.so
+*.dylib
+*.pck
+*.zip
+*.tar.gz
+*.apk
+*.aab
+*.ipa
+*.app
+*.dmg
+*.wasm
+*.html
+*.js
+
+# Android Gradle project (if using custom Android build)
+android/.gradle/
+android/.idea/
+android/local.properties
+android/build/
+android/bin/
+android/captures/
+android/.cxx/
+android/.externalNativeBuild/
+android/.signing/
+
+# OS/editor clutter
+.DS_Store
+Thumbs.db
+
+# Logs and temp files
+*.log
+*.tmp
+
+# VS Code project settings (optional to ignore)
+.vscode/
+
+# Godot Mono (C#) artefacts (safe to ignore even if unused)
+.mono/
+**/bin/
+**/obj/
+
+# Keep export presets tracked (do NOT ignore export_presets.cfg)
+# export_presets.cfg
