--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # Import cache dir (Godot 3 style) — still created by some tools
 .import/
 *md
+docs/EffectSpec-Designer-Guide.md
 
 # Exported builds and artefacts (adjust as you wish)
 *.exe
